name:          uWeb
version:       0.0.1
category:      Web
synopsis:      A microframework for web application development on top of WAI.

description:   TODO: Add a description

homepage:      http://github.com/willdonnelly/uWeb
bug-reports:   http://github.com/willdonnelly/uWeb/issues
stability:     alpha
author:        Will Donnelly
maintainer:    Will Donnelly <wgd@willdonnelly.net>
copyright:     (c) 2011 Will Donnelly
license:       BSD3
license-file:  LICENSE

build-type:    Simple
cabal-version: >= 1.6

library
  exposed-modules:  Network.UWeb
  build-depends:      base              >= 3 && < 5
                    , http-types        == 0.6.*
                    , bytestring        == 0.9.1.*
                    , mtl               == 2.0.*
                    , wai               == 0.4.*
                    , enumerator        == 0.4.10.*
                    , case-insensitive  == 0.2.*
                    , convertible       == 1.0.10.*
                    , text              == 0.11.0.*

source-repository head
  type:     git
  location: git://github.com/willdonnelly/uWeb.git
